# whisper-heb-nikud

./: .gitignore  README.md  pyproject.toml
.github/: Dockerfile.hf_space
.github/workflows/: hf_space.yml
src/: config.py  data.py  eval.py  infer.py  pre_tokenize.py  prepare.py  train.py
